fixed size img on mobile

--- a/styles/Prestations.module.css
+++ b/styles/Prestations.module.css
@@ -72,6 +72,7 @@
   object-fit: cover;
   margin: 10px;
   height: 250px;
+  max-width: 70vw;
   border-radius: 5%;
 }
 .skills {
